Remove API version aware